# CTRL

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: Build-PreRelease.yaml  Build-Release.yaml
Include/CTRL/: Allocator.h  App.h  Arch.h  CodeAllocator.h  CodeGen.h  Defs.h  Env.h  Exception.h  Hook.h  Mappable.h  Memory.h  Patch.h  Types.h
Source/: AllocateHeaps.c  Allocator.c  App.c  CodeAllocator.c  CodeGen.c  Env.c  ExHandler.s  Exception.c  Hook.c  Luma.s  Mappable.c  Memory.c  Patch.c  Syscalls.h  Syscalls.s
Test/: Main.c  Makefile
Tests/: CMakeLists.txt  Crash.s  Main.c  Remote.c
